Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-16791

Modern ZFS constified nvlist* functions breaking zfs_[gs]et_prop_*

XMLWordPrintable

    • 9223372036854775807

      When trying to build lustre against  zfs master tree we get this:

      libmount_utils_zfs.c: In function 'zfs_get_prop_int':
      libmount_utils_zfs.c:491:51: error: passing argument 3 of 'nvlist_lookup_string' from incompatible pointer type [-Werror=incompatible-pointer-types]
        ret = nvlist_lookup_string(propval, ZPROP_VALUE, &propstr);
                                                         ^~~~~~~~ 

      and related

            green Oleg Drokin
            green Oleg Drokin
            Votes:
            0 Vote for this issue
            Watchers:
            9 Start watching this issue

              Created:
              Updated:
              Resolved: